--- a/restro/css/styles.css
+++ b/restro/css/styles.css
@@ -11,3 +11,12 @@ body
     border: 0;
     border-radius: 0;
 }
+
+/* logo img */
+#logo-img{
+  
+    width: 150px;
+    
+    height: 150px;
+   
+}
